[package]
authors = ["Marirs <marirs@gmail.com>"]
categories = ["api-bindings"]
description = "VirusTotal REST API v3 (Public & Enterprise)"
edition = "2021"
exclude = ["data", "examples"]
keywords = ["api", "v3", "virustotal"]
license-file = "LICENSE"
name = "vt3"
readme = "README.md"
repository = "https://github.com/marirs/vt3-rs"
version = "0.7.3"

[package.metadata.docs.rs]
all-features = true

[dependencies]
async-compression = { version = "0.4.9", features = ["bzip2", "tokio"] }
base64 = "0.22.0"
bzip2 = { version = "0.4.3", optional = true }
futures = "0.3.30"
reqwest = { version = "0.12.3", features = ["json", "multipart", "stream"] }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.25"
tokio = "1.37.0"
tokio-util = { version = "0.7.11", features = ["io"] }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["full"] }

[features]
all = ["enterprise", "feeds", "hunting"]
enterprise = []
feeds = ["bzip2"]
hunting = []

[lib]
name = "vt3"
path = "src/lib.rs"

[badges]
travis-ci = { repository = "marirs/vt3-rs" }

[profile.dev]
opt-level = 3

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = true
opt-level = 3

[[example]]
name = "user_info"
path = "examples/enterprise/user_info.rs"
required-features = ["enterprise"]

[[example]]
name = "api_usage"
path = "examples/enterprise/api_usage.rs"
required-features = ["enterprise"]

[[example]]
name = "overall_quotas"
path = "examples/enterprise/overall_quotas.rs"
required-features = ["enterprise"]

[[example]]
name = "group_info"
path = "examples/enterprise/group_info.rs"
required-features = ["enterprise"]

[[example]]
name = "group_members"
path = "examples/enterprise/group_members.rs"
required-features = ["enterprise"]

[[example]]
name = "group_api_usage"
path = "examples/enterprise/group_api_usage.rs"
required-features = ["enterprise"]

[[example]]
name = "retrohunt_jobs"
path = "examples/hunting/retrohunt_jobs.rs"
required-features = ["hunting"]

[[example]]
name = "livehunt_get_rulesets"
path = "examples/hunting/livehunt_get_rulesets.rs"
required-features = ["hunting"]
